# libmodi

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libmodi.ini  libmodi.pc.in  libmodi.spec.in  pyproject.toml.in  runtests.sh  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
include/: Makefile.am  libmodi.h.in
include/libmodi/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libmodi/: Makefile.am  libmodi.c  libmodi.rc.in  libmodi_adc.c  libmodi_adc.h  libmodi_bands_data_handle.c  libmodi_bands_data_handle.h  libmodi_bands_table.c  libmodi_bands_table.h  libmodi_bit_stream.c  libmodi_bit_stream.h  libmodi_block_chunks_data_handle.c  libmodi_block_chunks_data_handle.h  libmodi_bzip.c  libmodi_bzip.h  libmodi_codepage.h  libmodi_compression.c  libmodi_compression.h  libmodi_data_band.c  libmodi_data_band.h  libmodi_data_block.c  libmodi_data_block.h  libmodi_debug.c  libmodi_debug.h  libmodi_definitions.h.in  libmodi_deflate.c  libmodi_deflate.h  libmodi_error.c  libmodi_error.h  libmodi_extern.h  libmodi_handle.c  libmodi_handle.h  libmodi_huffman_tree.c  libmodi_huffman_tree.h  libmodi_i18n.c  libmodi_i18n.h  libmodi_io_handle.c  libmodi_io_handle.h  libmodi_libbfio.h  libmodi_libcdata.h  (+43 more)
moditools/: Makefile.am  byte_size_string.c  byte_size_string.h  info_handle.c  info_handle.h  modiinfo.c  modimount.c  modioutput.c  modioutput.h  moditools_getopt.c  moditools_getopt.h  moditools_i18n.h  moditools_libbfio.h  moditools_libcdata.h  moditools_libcerror.h  moditools_libclocale.h  moditools_libcnotify.h  moditools_libcpath.h  moditools_libcstring.h  moditools_libcsystem.h  moditools_libmodi.h  moditools_libuna.h  moditools_output.c  moditools_output.h  moditools_signal.c  moditools_signal.h  moditools_unused.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h
msvscpp/: Makefile.am  libmodi.sln
msvscpp/bzip2/: bzip2.vcproj
msvscpp/dokan/: dokan.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcaes/: libcaes.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcdirectory/: libcdirectory.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfmos/: libfmos.vcproj
msvscpp/libfplist/: libfplist.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libhmac/: libhmac.vcproj
msvscpp/libmodi/: libmodi.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/modi_test_adc/: modi_test_adc.vcproj
msvscpp/modi_test_bands_data_handle/: modi_test_bands_data_handle.vcproj
msvscpp/modi_test_bands_table/: modi_test_bands_table.vcproj
msvscpp/modi_test_bit_stream/: modi_test_bit_stream.vcproj
msvscpp/modi_test_bzip/: modi_test_bzip.vcproj
msvscpp/modi_test_data_block/: modi_test_data_block.vcproj
msvscpp/modi_test_deflate/: modi_test_deflate.vcproj
msvscpp/modi_test_error/: modi_test_error.vcproj
msvscpp/modi_test_handle/: modi_test_handle.vcproj
msvscpp/modi_test_huffman_tree/: modi_test_huffman_tree.vcproj
msvscpp/modi_test_io_handle/: modi_test_io_handle.vcproj
msvscpp/modi_test_lzfse/: modi_test_lzfse.vcproj
msvscpp/modi_test_lzvn/: modi_test_lzvn.vcproj
msvscpp/modi_test_notify/: modi_test_notify.vcproj
msvscpp/modi_test_sparse_bundle_xml_plist/: modi_test_sparse_bundle_xml_plist.vcproj
msvscpp/modi_test_sparse_image_header/: modi_test_sparse_image_header.vcproj
msvscpp/modi_test_support/: modi_test_support.vcproj
msvscpp/modi_test_system_string/: modi_test_system_string.vcproj
msvscpp/modi_test_tools_info_handle/: modi_test_tools_info_handle.vcproj
msvscpp/modi_test_tools_output/: modi_test_tools_output.vcproj
msvscpp/modi_test_tools_signal/: modi_test_tools_signal.vcproj
msvscpp/modi_test_udif_block_table/: modi_test_udif_block_table.vcproj
msvscpp/modi_test_udif_block_table_entry/: modi_test_udif_block_table_entry.vcproj
msvscpp/modi_test_udif_resource_file/: modi_test_udif_resource_file.vcproj
msvscpp/zlib/: zlib.vcproj
pymodi/: Makefile.am  pymodi.c  pymodi.h  pymodi_error.c  pymodi_error.h  pymodi_file.c  pymodi_file.h  pymodi_file_object_io_handle.c  pymodi_file_object_io_handle.h  pymodi_file_objects_io_pool.c  pymodi_file_objects_io_pool.h  pymodi_handle.c  pymodi_handle.h  pymodi_integer.c  pymodi_integer.h  pymodi_libbfio.h  pymodi_libcerror.h  pymodi_libclocale.h  pymodi_libmodi.h  pymodi_python.h  pymodi_unused.h  pyvhdi.c  pyvhdi_error.c  pyvhdi_file.c  pyvhdi_file_object_io_handle.c  pyvhdi_file_object_io_handle.h  pyvhdi_integer.c  pyvhdi_integer.h  pyvhdi_libcstring.h
pymodi-python3/: Makefile.am
tests/: Makefile.am  atlocal.in  modi_test_adc.c  modi_test_bands_data_handle.c  modi_test_bands_table.c  modi_test_bit_stream.c  modi_test_bzip.c  modi_test_data_block.c  modi_test_deflate.c  modi_test_error.c  modi_test_functions.c  modi_test_functions.h  modi_test_getopt.c  modi_test_getopt.h  modi_test_handle.c  modi_test_huffman_tree.c  modi_test_io_handle.c  modi_test_libbfio.h  modi_test_libcdirectory.h  modi_test_libcerror.h  modi_test_libclocale.h  modi_test_libcnotify.h  modi_test_libcpath.h  modi_test_libcstring.h  modi_test_libcsystem.h  modi_test_libmodi.h  modi_test_libuna.h  modi_test_lzfse.c  modi_test_lzvn.c  modi_test_macros.h  modi_test_memory.c  modi_test_memory.h  modi_test_notify.c  modi_test_sparse_bundle_xml_plist.c  modi_test_sparse_image_header.c  modi_test_support.c  modi_test_system_string.c  modi_test_tools_info_handle.c  modi_test_tools_output.c  modi_test_tools_signal.c  (+25 more)
(+41 files in other folders)
