include_HEADERS = \
	libmodi.h

pkginclude_HEADERS = \
	libmodi/codepage.h \
	libmodi/definitions.h \
	libmodi/error.h \
	libmodi/extern.h \
	libmodi/features.h \
	libmodi/types.h

EXTRA_DIST = \
	libmodi.h.in \
	libmodi/definitions.h.in \
	libmodi/features.h.in \
	libmodi/types.h.in

DISTCLEANFILES = \
	libmodi.h \
	libmodi/definitions.h \
	libmodi/features.h \
	libmodi/types.h \
	Makefile \
	Makefile.in

