MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libmodi/libmodi.vcproj \
	libuna/libuna.vcproj \
	modi_test_error/modi_test_error.vcproj \
	modi_test_notify/modi_test_notify.vcproj \
	modi_test_support/modi_test_support.vcproj \
	modiinfo/modiinfo.vcproj \
	modimount/modimount.vcproj \
	pymodi/pymodi.vcproj \
	libmodi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

