MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libmodi/libmodi.vcproj \
	libuna/libuna.vcproj \
	modi_test_data_block/modi_test_data_block.vcproj \
	modi_test_error/modi_test_error.vcproj \
	modi_test_handle/modi_test_handle.vcproj \
	modi_test_io_handle/modi_test_io_handle.vcproj \
	modi_test_notify/modi_test_notify.vcproj \
	modi_test_support/modi_test_support.vcproj \
	modiinfo/modiinfo.vcproj \
	modimount/modimount.vcproj \
	pymodi/pymodi.vcproj \
	libmodi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

