MSVSCPP_FILES = \
	bzip2/bzip2.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcdirectory/libcdirectory.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libfplist/libfplist.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libmodi/libmodi.vcproj \
	libuna/libuna.vcproj \
	modi_test_bands_data_handle/modi_test_bands_data_handle.vcproj \
	modi_test_data_block/modi_test_data_block.vcproj \
	modi_test_deflate/modi_test_deflate.vcproj \
	modi_test_error/modi_test_error.vcproj \
	modi_test_handle/modi_test_handle.vcproj \
	modi_test_io_handle/modi_test_io_handle.vcproj \
	modi_test_notify/modi_test_notify.vcproj \
	modi_test_sparse_bundle_xml_plist/modi_test_sparse_bundle_xml_plist.vcproj \
	modi_test_sparse_image_header/modi_test_sparse_image_header.vcproj \
	modi_test_support/modi_test_support.vcproj \
	modi_test_system_string/modi_test_system_string.vcproj \
	modi_test_tools_info_handle/modi_test_tools_info_handle.vcproj \
	modi_test_tools_output/modi_test_tools_output.vcproj \
	modi_test_tools_signal/modi_test_tools_signal.vcproj \
	modi_test_udif_block_table/modi_test_udif_block_table.vcproj \
	modi_test_udif_block_table_entry/modi_test_udif_block_table_entry.vcproj \
	modi_test_udif_resource_file/modi_test_udif_resource_file.vcproj \
	modi_test_udif_xml_plist/modi_test_udif_xml_plist.vcproj \
	modiinfo/modiinfo.vcproj \
	modimount/modimount.vcproj \
	pymodi/pymodi.vcproj \
	zlib/zlib.vcproj \
	libmodi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

